# NetBaan-Sharif

./: .env.local.sample  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/account/: admin.py  models.py  throttling.py
apps/account/serializers/: auth.py  token.py  user.py
apps/account/tests/: test_model.py  tests_views_testcase.py
apps/account/urls/api/: user.py
apps/account/views/views_api/: auth.py  user.py
apps/book/serializers/: book.py  score.py
apps/book/tests/: test_book.py  test_score.py
apps/book/urls/: __init__.py  book.py  score.py
apps/book/views/: book.py  score.py
apps/core/mixin/: mixin_apiview.py
apps/core/permissions/: IsOwnerOrAdminPermission.py  IsOwnerOrReadOnlyPermission.py
config/: settings.py  urls.py
utility/otp_redis/: otp.py
